re-did the survey s it will look like the example

--- a/FriendFinderFile/app/public/home.html
+++ b/FriendFinderFile/app/public/home.html
@@ -23,7 +23,7 @@
             <p>Its as easy as that!</p>
         </h2>
         <div>
-            <a href="Take Survey">
+            <a href="survey.html">
                 <button type="button" class="btn btn-primary btn-lg" style> <span class="fa fa-list-alt"></span> Take Survey</button>
             </a>
         </div>
