--- a/FriendFinderFile/app/public/survey.html
+++ b/FriendFinderFile/app/public/survey.html
@@ -37,12 +37,12 @@
                                     aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question1" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -57,12 +57,12 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Selet an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question2" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -77,12 +77,12 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question3" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -97,12 +97,12 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question4" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -117,12 +117,12 @@
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question5" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -138,12 +138,12 @@
                                     data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question6" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -159,12 +159,12 @@
                                     data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question7" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -180,12 +180,12 @@
                                     data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question8" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -201,12 +201,12 @@
                                     data="10,20">
                                     Select and Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                        <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                        <a class="dropdown-item" href="#">2</a>
-                                        <a class="dropdown-item" href="#">3</a>
-                                        <a class="dropdown-item" href="#">4</a>
-                                        <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question9" aria-labelledby="dropdownMenu" >
+                                        <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                        <a class="dropdown-item" value="2" href="#">2</a>
+                                        <a class="dropdown-item" value="3" href="#">3</a>
+                                        <a class="dropdown-item" value="4" href="#">4</a>
+                                        <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -222,12 +222,12 @@
                                     aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                                    <a class="dropdown-item" href="#">1 (strongly disagree)</a>
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question10" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" vlaue="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -245,6 +245,58 @@
     <div id="links">
         API Friends list | Github Repo
     </div>
+    <script type="text/javascript">
+        $("#submit").on("click", function (event) {
+            event.preventDefault();
+
+            function validateForm() {
+                var filledIn = true;
+                $(".control-form").each(function () {
+                    if ($(this).val() === "") {
+                        filledIn = false;
+                    }
+                });
+
+                $(".answersGiven").each(function () {
+
+                    if ($(this).val() === "") {
+                        filledIn = false;
+                    }
+                });
+                return filledIn;
+            }
+
+            if (validateForm()) {
+                var userData = {
+                    name: $("#name").val(),
+                    photo: $("#imageLink").val(),
+                    scores: [
+                        $("#question1").val(),
+                        $("#question2").val(),
+                        $("#question3").val(),
+                        $("#question4").val(),
+                        $("#question5").val(),
+                        $("#question6").val(),
+                        $("#question7").val(),
+                        $("#question8").val(),
+                        $("#question9").val(),
+                        $("#question10").val()
+                    ]
+                };
+
+                $.post("/api/friends", userData, function (data) {
+
+                    $("#friendName").text(data.name);
+                    $("#friendImg").attr("src", data.imageLink);
+
+                    $("#results-modal").modal("toggle");
+
+                });
+            } else {
+                alert("Looks like you didn't fill it out completly, please fill in all fields.");
+            }
+        });
+    </script>
 </body>
 
 </html>
