--- a/FriendFinderFile/app/public/home.html
+++ b/FriendFinderFile/app/public/home.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="general.css">
     <title>Friend Finder Home Page</title>
 </head>
 
@@ -23,8 +22,8 @@
             <p>Its as easy as that!</p>
         </h2>
         <div>
-            <a href="survey.html">
-                <button type="button" class="btn btn-primary btn-lg" style> <span class="fa fa-list-alt"></span> Take Survey</button>
+            <a href="survey">
+                <button type="button" class="btn btn-primary btn-lg"> <span class="fa fa-list-alt"></span> Take Survey</button>
             </a>
         </div>
     </div>
