--- a/FriendFinderFile/app/public/survey.html
+++ b/FriendFinderFile/app/public/survey.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="general.css">
     <title>Friend Finder Survey</title>
 </head>
 
@@ -19,22 +21,32 @@
                     <h2>
                         Survey Questions
                     </h2>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Dropdown button
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </div>
                     <hr>
                     <div>
                         <h4><strong>About You</strong></h4>
                         <h5>Name (required)</h5>
                         <input type="text" id="name" class="control-form">
-                        <h5>Link to Photo Image(required)</h5>
+                        <h5>Link to Photo Image (required)</h5>
                         <input type="text" id="imageLink" class="control-form">
                     </div>
                     <hr>
                     <div>
-                        <h4> <strong>Question 1</strong></h4>
+                        <h4><strong>Question 1</strong></h4>
                         <h5>I like dogs</h5>
                         <div class="d-flex">
                             <div class="dropdown mr-1">
-                                <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false" data="10,20">
+                                <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
                                 <div class="answerGiven" id="question1" aria-labelledby="dropdownMenu">
@@ -134,8 +146,7 @@
                         <div class="d-flex">
                             <div class="dropdown mr-1">
                                 <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data="10,20">
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
                                 <div class="answerGiven" id="question6" aria-labelledby="dropdownMenu">
@@ -155,8 +166,7 @@
                         <div class="d-flex">
                             <div class="dropdown mr-1">
                                 <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data="10,20">
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
                                 <div class="answerGiven" id="question7" aria-labelledby="dropdownMenu">
@@ -176,8 +186,7 @@
                         <div class="d-flex">
                             <div class="dropdown mr-1">
                                 <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data="10,20">
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
                                 <div class="answerGiven" id="question8" aria-labelledby="dropdownMenu">
@@ -197,16 +206,15 @@
                         <div class="d-flex">
                             <div class="dropdown mr-1">
                                 <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data="10,20">
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select and Option
                                 </button>
-                                <div class="answerGiven" id="question9" aria-labelledby="dropdownMenu" >
-                                        <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
-                                        <a class="dropdown-item" value="2" href="#">2</a>
-                                        <a class="dropdown-item" value="3" href="#">3</a>
-                                        <a class="dropdown-item" value="4" href="#">4</a>
-                                        <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
+                                <div class="answerGiven" id="question9" aria-labelledby="dropdownMenu">
+                                    <a class="dropdown-item" value="1" href="#">1 (strongly disagree)</a>
+                                    <a class="dropdown-item" value="2" href="#">2</a>
+                                    <a class="dropdown-item" value="3" href="#">3</a>
+                                    <a class="dropdown-item" value="4" href="#">4</a>
+                                    <a class="dropdown-item" value="5" href="#">5 (strongly agree)</a>
                                 </div>
                             </div>
                         </div>
@@ -217,9 +225,8 @@
                         <h5>You can always find ways to improve yourself</h5>
                         <div class="d-flex">
                             <div class="dropdown mr-1">
-                                <button type="button" class="btn btn-light dropdown-toggle"
-                                    id="dropdownMenu" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false" data="10,20">
+                                <button type="button" class="btn btn-light dropdown-toggle" id="dropdownMenu"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
                                     Select an Option
                                 </button>
                                 <div class="answerGiven" id="question10" aria-labelledby="dropdownMenu">
@@ -232,11 +239,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <a href="">
-                        <button type="submit" class="btn btn-primary btn-lg btn btn-block" value="submit"> <span class="fa fa-check"></span> Submit</button>
-                    </a>
+
+                    <div>
+                        <button type="submit" class="btn btn-primary btn-lg btn btn-block" value="submit"> <span class="fa fa-check"></span>
+                            Submit
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -245,59 +253,8 @@
     <div id="links">
         API Friends list | Github Repo
     </div>
-    <script type="text/javascript">
 
-        $("#submit").on("click", function (event) {
-            event.preventDefault();
-
-            function filledForm() {
-                var filledIn = true;
-                $(".control-form").each(function () {
-                    if ($(this).val() === "") {
-                        filledIn = false;
-                    }
-                });
-
-                $(".answersGiven").each(function () {
-
-                    if ($(this).val() === "") {
-                        filledIn = false;
-                    }
-                });
-                return filledIn;
-            }
-
-            if (filledForm()) {
-                var userData = {
-                    name: $("#name").val(),
-                    image: $("#imageLink").val(),
-                    scores: [
-                        $("#question1").val(),
-                        $("#question2").val(),
-                        $("#question3").val(),
-                        $("#question4").val(),
-                        $("#question5").val(),
-                        $("#question6").val(),
-                        $("#question7").val(),
-                        $("#question8").val(),
-                        $("#question9").val(),
-                        $("#question10").val()
-                    ]
-                };
-
-                $.post("/api/public/friends", userData, function (data) {
-
-                    $("#friendName").text(data.name);
-                    $("#friendImg").attr("src", data.imageLink);
-
-                    $("#results-modal").modal("toggle");
-
-                });
-            } else {
-                alert("Looks like you didn't fill it out completly, please fill in all fields.");
-            }
-        });
-    </script>
+    <script src="js/survey.js"></script>
 </body>
 
 </html>
