--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -35,7 +35,7 @@
                         <h5>I like dogs</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question1" aria-labelledby="dropdownMenuButton">
@@ -53,7 +53,7 @@
                         <h5>I like cats</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Selet an Option
                             </button>
                             <div class="dropdown-menu" id="question2" aria-labelledby="dropdownMenuButton">
@@ -71,7 +71,7 @@
                         <h5>I am an outgoing person</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question3" aria-labelledby="dropdownMenuButton">
@@ -89,7 +89,7 @@
                         <h5>I would rather stay in and watch a mvie then go partying</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question4" aria-labelledby="dropdownMenuButton">
@@ -107,7 +107,7 @@
                         <h5>I always say what I feel</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question5" aria-labelledby="dropdownMenuButton">
@@ -125,7 +125,7 @@
                         <h5>I make friends easily</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question6" aria-labelledby="dropdownMenuButton">
@@ -143,7 +143,7 @@
                         <h5>I always look for the silver lining</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question7" aria-labelledby="dropdownMenuButton">
@@ -161,7 +161,7 @@
                         <h5>I try to avoid unnecessary conflict</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question8" aria-labelledby="dropdownMenuButton">
@@ -179,7 +179,7 @@
                         <h5>I can tell when someone is upset</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select and Option
                             </button>
                             <div class="dropdown-menu" id="question9" aria-labelledby="dropdownMenuButton">
@@ -197,7 +197,7 @@
                         <h5>You can always find ways to improve yourself</h5>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="dropdownMenu"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data="10,20">
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Select an Option
                             </button>
                             <div class="dropdown-menu" id="question10" aria-labelledby="dropdownMenButtonu">
