changed over to bootstrap

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <title>Friend Finder Survey</title>
 </head>
 
@@ -39,11 +39,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -57,11 +57,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -75,11 +75,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -93,11 +93,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -111,11 +111,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -129,11 +129,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -147,11 +147,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -165,11 +165,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -183,11 +183,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
@@ -201,11 +201,11 @@
                                 <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><a value="2" href="#">2</a></li>
-                                <li><a value="3" href="#">3</a></li>
-                                <li><a value="4" href="#">4</a></li>
-                                <li><a value="5" href="#">5 (Strongly Agree)</a></li>
+                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
+                                <li><option value="2" href="#">2</a></li>
+                                <li><option value="3" href="#">3</a></li>
+                                <li><option value="4" href="#">4</a></li>
+                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
                             </ul>
                         </div>
                     </div>
