fix survey questions

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -69,7 +69,7 @@
 
                         <div>
                             <h4><strong>Question 4</strong></h4>
-                            <h5>I would rather stay in and watch a mvie then go partying</h5>
+                            <h5>I would rather stay in and watch a movie then go partying</h5>
                             <select class="custom-select mr-sm-2" id="question4">
                                 <option value="1" href="#">1 (Strongly Disagree)</option>
                                 <option value="2" href="#">2</option>
@@ -141,7 +141,7 @@
 
                         <div>
                             <h4><strong>Question 10</strong></h4>
-                            <h5>You can always find ways to improve yourself</h5>
+                            <h5>I can always find ways to improve myself</h5>
                             <select class="custom-select mr-sm-2" id="question10">
                                 <option value="1" href="#">1 (Strongly Disagree)</option>
                                 <option value="2" href="#">2</option>
