--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -104,19 +104,19 @@
                         </div>
 
                         <div>
-                            <h4><strong>Quesiton 7</strong></h4>
-                            <h5>I always look for the silver lining</h7>
-                                <select class="custom-select mr-sm-2" id="question7">
-                                    <option value="1" href="#">1 (Strongly Disagree)</option>
-                                    <option value="2" href="#">2</option>
-                                    <option value="3" href="#">3</option>
-                                    <option value="4" href="#">4</option>
-                                    <option value="5" href="#">5 (Strongly Agree)</option>
-                                </select>
+                            <h4><strong>Question 7</strong></h4>
+                            <h5>I always look for the silver lining</h5>
+                            <select class="custom-select mr-sm-2" id="question7">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
                         </div>
 
                         <div>
-                            <h4><Strong>Question 8</Strong></h4>
+                            <h4><strong>Question 8</strong></h4>
                             <h5>I try to avoid unnecessary conflict</h5>
                             <select class="custom-select mr-sm-2" id="question8">
                                 <option value="1" href="#">1 (Strongly Disagree)</option>
@@ -156,6 +156,7 @@
                                 <span class="fa fa-check"></span>
                                 Submit
                             </button>
+                        </div>
                     </form>
                 </div>
             </div>
