--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>Friend Finder Survey</title>
 </head>
 
